--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CEO Pay Visualization</title>
+    <title>How big is the proposed pay package for Elon Musk?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -37,7 +37,7 @@
     </style>
 </head>
 <body>
-    <h1>Pay package or rug pull?</h1>
+    <h1>Pay package or rug pull? How much is too much?</h1>
 
     <p>Let's say the height of a single-pixel represents $10,000. So $10,000 looks like this.</p>
     <svg width="100" height="1">
