--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta property="og:image" content="https://yyahn.com/elon_paypackage/screenshot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>How big is the proposed pay package for Elon Musk?</title>
     <style>
