--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta property="og:image" content="https://yyahn.com/elon_paypackage/screenshot.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How big is the proposed pay package for Elon Musk?</title>
+    <title>Just how big is the proposed pay package for Elon Musk?</title>
     <style>
         body {
             font-family: Arial, sans-serif;
